syntax = "proto3";
package synapse.msgs;

message Bit32Flag {
	enum Bit {
		ZERO=0;
		B0=1;
		B1=2;
		B2=4;
		B3=8;
		B4=16;
		B5=32;
		B6=64;
		B7=128;
		B8=256;
		B9=512;
		B10=1024;
		B11=2048;
		B12=4096;
		B13=8192;
		B14=16384;
		B15=32768;
		B16=65536;
		B17=131072;
		B18=262144;
		B19=524288;
		B20=1048576;
		B21=2097152;
		B22=4194304;
		B23=8388608;
		B24=16777216;
		B25=33554432;
		B26=67108864;
		B27=134217728;
		B28=268435456;
		B29=536870912;
		B30=1073741824;
	}
	fixed32 bit = 1;
}
